--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@
 
 .header {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   padding: 1em;
   background-color: rgba(7, 128, 184, 0.699);
   color: white;
@@ -26,6 +27,19 @@
   grid-column: 2;
   grid-row: 2;
   font-size: 1.7rem;
+}
+
+.barra-de-navegacion {
+  display: flex;
+  gap: 1em;
+}
+.barra-de-navegacion__items {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
 
 /*# sourceMappingURL=styles.css.map */
