--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,7 @@
 .header{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
     padding: 1em;
     background-color: rgba(7, 128, 184, 0.699);
     color: white;
