se agrego la seccion de lenguajes de programacion en el index

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -12,7 +12,7 @@
 .presentacion{
     display: grid;
     grid-template-columns: 200px 400px 200px 200px;
-    grid-template-rows: 200px 200px 200px 200px;
+    grid-template-rows: 200px 200px 200px;
     background-color: rgba(7, 128, 184, 0.699);
     color: white;
 
