--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
 .presentacion {
   display: grid;
   grid-template-columns: 200px 400px 200px 200px;
-  grid-template-rows: 200px 200px 200px 200px;
+  grid-template-rows: 200px 200px 200px;
   background-color: rgba(7, 128, 184, 0.699);
   color: white;
 }
@@ -27,6 +27,43 @@
   grid-column: 2;
   grid-row: 2;
   font-size: 1.7rem;
+}
+
+.seccion-lenguajes {
+  background-color: rgba(7, 128, 184, 0.699);
+  color: white;
+  display: grid;
+  grid-template-columns: 200px 600px 200px 265px;
+  grid-template-rows: 200px 200px 200px 200px;
+}
+
+.seccion-lenguajes__titulo {
+  font-size: 1.5rem;
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.seccion-lenguajes__img {
+  display: grid;
+  grid-template-columns: 200px 100px 100px 100px 100px 100px;
+}
+
+.html-img {
+  width: 68px;
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.css-img {
+  width: 68px;
+  grid-column: 3;
+  grid-row: 2;
+}
+
+.js-img {
+  width: 68px;
+  grid-column: 4;
+  grid-row: 2;
 }
 
 .barra-de-navegacion {
