--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: "Lora", serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .header {
@@ -13,6 +13,7 @@
   color: white;
 }
 .header__titulo {
+  font-family: "Lora", serif;
   font-size: 3rem;
 }
 
@@ -30,11 +31,12 @@
 }
 
 .seccion-lenguajes {
-  background-color: rgba(7, 128, 184, 0.699);
-  color: white;
   display: grid;
   grid-template-columns: 200px 600px 200px 265px;
   grid-template-rows: 200px 200px 200px 200px;
+  font-weight: 900;
+  background-color: rgba(7, 128, 184, 0.699);
+  color: white;
 }
 
 .seccion-lenguajes__titulo {
