--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -6,6 +6,7 @@
     background-color: rgba(7, 128, 184, 0.699);
     color: white;
 &__titulo{
+font-family: 'Lora', serif;
     font-size: 3rem;
 }
 }
