--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,9 +1,10 @@
 .seccion-lenguajes{
-    background-color: rgba(7, 128, 184, 0.699);
-    color: white;
     display: grid;
     grid-template-columns: 200px 600px 200px 265px;
     grid-template-rows: 200px 200px 200px 200px;
+    font-weight: 900;
+    background-color: rgba(7, 128, 184, 0.699);
+    color: white;
 }
 .seccion-lenguajes__titulo{
     font-size: 1.5rem;
