--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,6 @@
 }
 
 .seccion-lenguajes {
-  display: grid;
-  grid-template-columns: 200px 600px 200px 265px;
-  grid-template-rows: 200px 200px 200px 200px;
   font-weight: 900;
   background-color: rgba(7, 128, 184, 0.699);
   color: white;
@@ -41,31 +38,36 @@
 
 .seccion-lenguajes__titulo {
   font-size: 1.5rem;
-  grid-column: 2;
-  grid-row: 1;
+  display: flex;
+  justify-content: center;
+  padding: 0.5em;
 }
 
 .seccion-lenguajes__img {
-  display: grid;
-  grid-template-columns: 200px 100px 100px 100px 100px 100px;
+  display: flex;
+  justify-content: center;
+  gap: 3em;
 }
 
 .html-img {
   width: 68px;
-  grid-column: 2;
-  grid-row: 2;
+  background-color: rgba(255, 255, 255, 0.151);
+  padding: 1em;
+  border-radius: 10px;
 }
 
 .css-img {
   width: 68px;
-  grid-column: 3;
-  grid-row: 2;
+  background-color: rgba(255, 255, 255, 0.151);
+  padding: 1em;
+  border-radius: 10px;
 }
 
 .js-img {
   width: 68px;
-  grid-column: 4;
-  grid-row: 2;
+  background-color: rgba(255, 255, 255, 0.151);
+  border-radius: 10px;
+  padding: 1em;
 }
 
 .barra-de-navegacion {
