--- a/sass/components/_barra-de-navegacion.scss
+++ b/sass/components/_barra-de-navegacion.scss
@@ -3,6 +3,7 @@
     gap: 1em;
     &__items{
         list-style: none;
+        transition: transform 0.5s ease;
     }
 }
 a{
@@ -10,5 +11,5 @@ a{
     color: white;
 }
 .barra-de-navegacion__items:hover{
-    scale: 1.2;
+    transform: scale(1.2);
 }
