--- a/css/styles.css
+++ b/css/styles.css
@@ -88,4 +88,31 @@ a {
   transform: scale(1.2);
 }
 
+.contactos {
+  background-color: rgba(7, 128, 184, 0.699);
+  color: white;
+  display: grid;
+  grid-template-columns: 180px 800px;
+  grid-template-rows: 100px 200px 200px;
+}
+.contactos__titulo {
+  font-size: 3rem;
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.mail {
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+  background-color: rgba(7, 128, 184, 0.699);
+  color: white;
+}
+.mail__icon {
+  width: 5%;
+}
+.mail__texto {
+  font-size: 2.5rem;
+}
+
 /*# sourceMappingURL=styles.css.map */
