--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,7 @@
 @import "./base";
 @import "./components/header";
 @import "./pages/index";
-@import "./components/barra-de-navegacion"
+@import "./components/barra-de-navegacion";
+@import "./pages/contactos";
+@import "./pages/proyectos";
+@import "./pages/sobremi";
