--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,3 +1,16 @@
+.presentacion{
+    display: grid;
+    grid-template-columns: 200px 400px 200px 200px;
+    grid-template-rows: 200px 200px 200px;
+    background-color: rgba(7, 128, 184, 0.699);
+    color: white;
+
+&__texto{
+    grid-column: 2;
+    grid-row: 2;
+    font-size: 1.7rem;
+    }
+}
 .seccion-lenguajes{
     font-weight: 900;
     background-color: rgba(7, 128, 184, 0.699);
