--- a/css/styles.css
+++ b/css/styles.css
@@ -115,4 +115,16 @@ a {
   font-size: 2.5rem;
 }
 
+.sobremi-seccion {
+  background-color: rgba(7, 128, 184, 0.699);
+  padding: 1em;
+}
+.sobremi-seccion__titulo {
+  color: rgba(0, 86, 126, 0.76);
+  font-size: 1.3rem;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  padding: 1em;
+}
+
 /*# sourceMappingURL=styles.css.map */
