se agrego un titulo en la pagina de Sobre Mi

--- a/sass/pages/_sobremi.scss
+++ b/sass/pages/_sobremi.scss
@@ -1,6 +1,7 @@
 .sobremi-seccion {
     background-color: rgba(7, 128, 184, 0.699);
     padding: 1em;
+    margin-bottom: 5em;
     &__titulo{
         color:  rgba(0, 86, 126, 0.76);
         font-size: 1.3rem;
@@ -8,4 +9,11 @@
         border-radius: 10px;
         padding: 1em;
     }
+}
+.sobremi-titulo {
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-size: 2.5rem;
+    padding: 1em;
 }
