--- a/css/styles.css
+++ b/css/styles.css
@@ -118,12 +118,21 @@ a {
 .sobremi-seccion {
   background-color: rgba(7, 128, 184, 0.699);
   padding: 1em;
+  margin-bottom: 5em;
 }
 .sobremi-seccion__titulo {
   color: rgba(0, 86, 126, 0.76);
   font-size: 1.3rem;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
+  padding: 1em;
+}
+
+.sobremi-titulo {
+  display: flex;
+  justify-content: center;
+  color: white;
+  font-size: 2.5rem;
   padding: 1em;
 }
 
