--- a/css/styles.css
+++ b/css/styles.css
@@ -115,10 +115,26 @@ a {
   font-size: 2.5rem;
 }
 
+.proyectos {
+  background-color: rgba(7, 128, 184, 0.699);
+  color: white;
+  display: grid;
+  grid-template-columns: 200px 400px 200px 200px;
+  grid-template-rows: 100px 50px 300px 200px;
+}
+.proyectos__texto {
+  grid-column: 2;
+  grid-row: 2;
+  font-size: 2rem;
+}
+.proyectos__img {
+  grid-column: 4;
+  grid-row: 3;
+}
+
 .sobremi-seccion {
   background-color: rgba(7, 128, 184, 0.699);
   padding: 1em;
-  margin-bottom: 5em;
 }
 .sobremi-seccion__titulo {
   color: rgba(0, 86, 126, 0.76);
